fix: card i dark mode errata

--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,17 @@
   border-bottom-right-radius: 10px;
 }
 
+html[data-bs-theme=dark] .v-list .v-card.tf-noborder > header {
+  background-color: unset;
+  border-color: var(--t-border-color);
+}
+
+html[data-bs-theme=dark] .v-list .v-card.tf-noborder > section {
+  border: 1px solid var(--t-border-color);
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+
 .v-card::after {
   display: none;
 }
